syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

message SetWorkflowVariableRequest {
	optional string workflowUid = 1;
	optional string key = 2;
	optional bytes value = 3;
	optional int64 totalSize = 4;
	optional int64 chunkSize = 5;
}